--- a/index.html
+++ b/index.html
@@ -150,6 +150,7 @@ PLS ask for permission & add a link to this website before you directly copy and
 
   <h3><a name="teaching"></a>Teaching & Talk</h3>
   <ul>
+    <li> Feb 2024: invited talk on multilingual LLMs at <a href="https://ai.sutd.edu.sg/">SUTD AI Mega Centre</a>.</li>
     <li> Sep 2023: invited talk on M3Exam at multilingual & multimodal LLMs session of <a href="http://mlnlp.world/mlnlp2023/">MLNLP 2023</a></li>
     <li> Aug 2023: half-day tutorial "<a href="https://isakzhang.github.io/talks/ijcai23-sentiment-tutorial.html">Sentiment Analysis in the Era of LLMs</a>" at IJCAI 2023. [<a href="https://docs.google.com/presentation/d/1fjH6ZxfCPtJPI1eU8eqhG9qdS1w3DPwxrYG6-SRmCMU/edit?usp=sharing">slides</a>]</li>
     <li> Mar 2023: invited talk "A Survey on Aspect-Based Sentiment Analysis" at <a href="https://s3a.sentic.net/">Singapore Symposium
