--- a/research.html
+++ b/research.html
@@ -84,10 +84,34 @@
   <h3><a name="pub"></a>Recent Preprints</h3> 
     <ul>
       <li>
-        <div id="text" style = "color:#1f57b8"><span style="color:#c30"><i>[NEW]</i></span> SeaLLMs -- Large Language Models for Southeast Asia </div>
+        <div id="text" style = "color:#1f57b8"> <span style="color:#c30"><i>[NEW]</i></span> How do Large Language Models Handle Multilingualism?</div>
+        Yiran Zhao, <strong>Wenxuan Zhang</strong>, Guizhen Chen, Kenji Kawaguchi, Lidong Bing
+        <br>arXiv:2402.18815
+        [<a href="https://arxiv.org/abs/2402.18815">paper</a>] [<a href="">data&code</a>]
+      </li>
+      <p> </p>
+
+      <li>
+        <div id="text" style = "color:#1f57b8"> SeaLLMs -- Large Language Models for Southeast Asia </div>
         Xuan-Phi Nguyen*, <strong>Wenxuan Zhang*</strong>, Xin Li*, Mahani Aljunied*, Qingyu Tan, Liying Cheng, Guanzheng Chen, Yue Deng, Sen Yang, Chaoqun Liu, Hang Zhang, Lidong Bing
         <br>arXiv:2312.00738
         [<a href="https://arxiv.org/abs/2312.00738">paper</a>] [<a href="https://github.com/DAMO-NLP-SG/SeaLLMs">code</a>] [<a href="https://huggingface.co/SeaLLMs/SeaLLM-Chat-13b">demo</a>] 
+      </li>
+      <p> </p>
+
+      <li>
+        <div id="text" style = "color:#1f57b8"></span>Is Translation All You Need? A Study on Solving Multilingual Tasks with Large Language Models</div>
+        Chaoqun Liu, <strong>Wenxuan Zhang</strong>, Yiran Zhao, Anh Tuan Luu, Lidong Bing
+        <br>arXiv:2403.10258
+        [<a href="https://arxiv.org/abs/2403.10258">paper</a>] [<a href="">code</a>]
+      </li>
+      <p> </p>
+
+      <li>
+        <div id="text" style = "color:#1f57b8">AdaMergeX: Cross-Lingual Transfer with Large Language Models via Adaptive Adapter Merging        </div>
+        Yiran Zhao, <strong>Wenxuan Zhang</strong>, Huiming Wang, Kenji Kawaguchi, Lidong Bing
+        <br>arXiv:2402.18913
+        [<a href="https://arxiv.org/abs/2402.18913">paper</a>] [<a href="https://github.com/DAMO-NLP-SG/AdaMergeX">data&code</a>]
       </li>
       <p> </p>
   
@@ -99,13 +123,6 @@
       </li>
       <p> </p>
 
-      <li>
-        <div id="text" style = "color:#1f57b8">Sentiment Analysis in the Era of Large Language Models: A Reality Check</div>
-        <strong>Wenxuan Zhang</strong>*, Yue Deng*, Bing Liu, Sinno Jialin Pan, Lidong Bing
-        <br>arXiv:2305.15005
-        [<a href="https://arxiv.org/abs/2305.15005">paper</a>] [<a href="https://github.com/DAMO-NLP-SG/LLM-Sentiment">data&code</a>]
-      </li>
-      <p> </p>
     </ul>
 
   <h3><a name="pub"></a>Selected Publications<font size="4.5"> [<a href="https://scholar.google.com/citations?user=tr7MWA4AAAAJ&hl=en">Google Scholar</a>]</font></h3> 
@@ -126,6 +143,14 @@
       </li>
       <p> </p>
 
+      <li>
+        <div id="text" style = "color:#1f57b8">Sentiment Analysis in the Era of Large Language Models: A Reality Check</div>
+        <strong>Wenxuan Zhang</strong>*, Yue Deng*, Bing Liu, Sinno Jialin Pan, Lidong Bing
+        <br>Findings of NAACL 2024
+        [<a href="https://arxiv.org/abs/2305.15005">paper</a>] [<a href="https://github.com/DAMO-NLP-SG/LLM-Sentiment">data&code</a>]
+      </li>
+      <p> </p>
+      
       <li>
         <div id="text" style = "color:#1f57b8">M3Exam: A Multilingual, Multimodal, Multilevel Benchmark for Examining Large Language Models</div>
         <strong>Wenxuan Zhang</strong>, Sharifah Mahani Aljunied, Chang Gao, Yew Ken Chia, Lidong Bing
