--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ PLS ask for permission & add a link to this website before you directly copy and
   <br><br>
   Contact: <code class="language-plaintext highlighter-rouge">isakzhang [at] gmail.com</code>
   
-  <br>More about me: <a href="https://scholar.google.com/citations?user=tr7MWA4AAAAJ&hl=en">Google Scholar</a> | <a href="https://isakzhang.notion.site/">Blog Posts</a> | <a href="https://www.linkedin.com/in/wenxuan-zhang-608b88153/">LinkedIn</a>
+  <br>More about me: <a href="https://scholar.google.com/citations?user=tr7MWA4AAAAJ&hl=en">Google Scholar</a> | <a href="https://isakzhang.notion.site/">Blog Posts</a> | <a href="https://www.linkedin.com/in/wenxuan-zhang-608b88153/">LinkedIn</a> | <a href="https://twitter.com/wxzhang_isaac">X (Twitter)</a>
   
   <!-- 
   <br>Quick jumps: [<a href="#bio">Short Bio</a>] [<a href="#pub">Publications</a>] [<a href="#awards">Honors</a>] [<a href="#professional">Service</a>] [<a href="#teaching">Teaching&Talk</a>]
@@ -92,10 +92,10 @@ PLS ask for permission & add a link to this website before you directly copy and
 
   <br><br>Some recent research projects are:
   <ul>
-    <li> Understanding and enhancing multilingual ability of (mostly English-centric) LLMs </li>
-    <li> LLM safety: ensuring the model's safety in both the development and deployment stages </li>
-    <li> Evaluation of foundation models: how to comprehensively AND fairly evaluate an LLM </li>
-    <li> Sentiment and opinion understanding: how well do LLMs understand human's subjective feeling </li>
+    <li> Understanding and enhancing multilingual ability of (mostly English-centric) LLMs: <a href="https://damo-nlp-sg.github.io/SeaLLMs/">SeaLLMs</a></li>
+    <li> Ensuring LLMs' safety in both the development and deployment stages: <a href="https://arxiv.org/abs/2310.06474">[ICLR 2024]</a></li>
+    <li> How to comprehensively AND fairly evaluate foundation models: <a href="https://arxiv.org/pdf/2306.05179.pdf">[NeurIPS 2023]</a></li>
+    <!-- <li> Sentiment and opinion understanding: how well do LLMs understand human's subjective feeling </li> -->
   </ul>
 
   <span style="color:royalblue;"><i>Feel free to drop me an email if you want to collaborate. Research intern positions are also available based in Singapore or China (Hangzhou).</i></span>
@@ -107,8 +107,8 @@ PLS ask for permission & add a link to this website before you directly copy and
       <li><span style="color:#B08519">[Nov 2023]</span> We release the first LLM named <a href="https://github.com/DAMO-NLP-SG/SeaLLMs">SeaLLMs</a> dedicated to languages in Southeast Asia region.</li>
       <li><span style="color:#B08519">[Sep 2023]</span> Two papers accepted to NeurIPS 2023.</li>
       <li><span style="color:#B08519">[June 2023]</span> We release <strong>M3Exam</strong>, a novel benchmark sourced from real and official human exam questions for evaluating LLMs in a multilingual, multimodal, and multilevel context. <a href="https://arxiv.org/pdf/2306.05179.pdf">Paper</a> and <a href="https://github.com/DAMO-NLP-SG/M3Exam">data</a> are all public available now.</li>
-      <li><span style="color:#B08519">[May 2023]</span> We conducted a reality check on current large language models for various sentiment analysis tasks, the <a href="https://arxiv.org/abs/2305.15005">paper</a> is available on arXiv now.</li>
-      <li><span style="color:#B08519">[Apr 2023]</span> Our tutorial "Sentiment Analysis and Beyond in the Era of Enlarged Language Models" was accepted to IJCAI-2023. Check it <a href="https://isakzhang.github.io/talks/ijcai23-sentiment-tutorial.html">here</a>!</li>
+      <!-- <li><span style="color:#B08519">[May 2023]</span> We conducted a reality check on current large language models for various sentiment analysis tasks, the <a href="https://arxiv.org/abs/2305.15005">paper</a> is available on arXiv now.</li> -->
+      <!-- <li><span style="color:#B08519">[Apr 2023]</span> Our tutorial "Sentiment Analysis and Beyond in the Era of Enlarged Language Models" was accepted to IJCAI-2023. Check it <a href="https://isakzhang.github.io/talks/ijcai23-sentiment-tutorial.html">here</a>!</li> -->
     </ul>
   
 
