--- a/index.html
+++ b/index.html
@@ -27,10 +27,8 @@ PLS ask for permission & add a link to this website before you directly copy and
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
-
     gtag('config', 'UA-134238626-1');
   </script>
-
 </head>
 
 <body>
@@ -49,7 +47,7 @@ PLS ask for permission & add a link to this website before you directly copy and
   <br><br>
   Contact: <code class="language-plaintext highlighter-rouge">isakzhang [at] gmail.com</code>
   
-  <br>More about me: <a href="https://scholar.google.com/citations?user=tr7MWA4AAAAJ&hl=en">Google Scholar</a> | <a href="https://isakzhang.notion.site/">Blog Posts</a> | <a href="https://www.linkedin.com/in/wenxuan-zhang-608b88153/">LinkedIn</a> | <a href="https://twitter.com/wxzhang_isaac">X (Twitter)</a>
+  <br>More about me: <a href="https://scholar.google.com/citations?user=tr7MWA4AAAAJ&hl=en">Google Scholar</a> | <a href="https://isakzhang.notion.site/">Blog Posts</a> | <a href="https://www.linkedin.com/in/wenxuan-zhang-608b88153/">LinkedIn</a> | <a href="https://x.com/Wenxuan__Zhang">X (Twitter)</a>
   
   <!-- 
   <br>Quick jumps: [<a href="#bio">Short Bio</a>] [<a href="#pub">Publications</a>] [<a href="#awards">Honors</a>] [<a href="#professional">Service</a>] [<a href="#teaching">Teaching&Talk</a>]
@@ -58,7 +56,7 @@ PLS ask for permission & add a link to this website before you directly copy and
   <!--Navigation bar-->
   <div id="menu">
     <div>
-      <a href="index.html">Home</a>
+      <a href="index.html">About</a>
     </div>
     <div>
       <a href="research.html">Publications</a>
@@ -88,30 +86,40 @@ PLS ask for permission & add a link to this website before you directly copy and
   I am currently a research scientist at Language Technology Lab, <a href="https://damo.alibaba.com/?lang=en">Alibaba DAMO Academy</a>. Prior to that, I obtained my Ph.D. degree from <a href="https://www.cuhk.edu.hk/">The Chinese University of Hong Kong</a>, 
   under the supervision of <a href="http://www1.se.cuhk.edu.hk/~textmine/">Prof. Wai Lam</a>.
 
-  <br><br>My research aims to advance NLP models that are <strong>inclusive</strong>, supporting diverse languages and cultures (i.e., multilingual and multicultural NLP), while also <strong>trustworthy</strong> through techniques that improve safety and robustness of language models. I am passionate about ensuring NLP benefits people equally by making systems accessible, controllable and reliable.
+  <br><br>My research aims to advance NLP models that are <strong>inclusive</strong>, supporting diverse languages and cultures (e.g., multilingual large language models), while also <strong>trustworthy</strong> through techniques that improve safety and robustness of language models. I am passionate about ensuring NLP benefits people equally by making systems accessible, controllable and reliable.
 
-  <br><br>Some recent research projects are:
+  <br><br>Current research projects are (full publications can be found <a href="https://isakzhang.github.io/research.html">here</a> or <a href="https://scholar.google.com/citations?user=tr7MWA4AAAAJ&hl=en">Google Scholar</a>):
   <ul>
-    <li> Understanding and enhancing multilingual ability of (mostly English-centric) LLMs: <a href="https://damo-nlp-sg.github.io/SeaLLMs/">SeaLLMs</a></li>
-    <li> Ensuring LLMs' safety in both the development and deployment stages: <a href="https://arxiv.org/abs/2310.06474">[ICLR 2024]</a></li>
-    <li> How to comprehensively AND fairly evaluate foundation models: <a href="https://arxiv.org/pdf/2306.05179.pdf">[NeurIPS 2023]</a></li>
+    <li> 
+      [<span style="color:royalblue;">Multilingual</span>] Understanding and enhancing multilingual capabilities of LLMs: <a href="https://damo-nlp-sg.github.io/SeaLLMs/">SeaLLMs</a>
+    </li>
+    <li> 
+      [<span style="color:royalblue;">Safety</span>] Ensuring safety of LLMs from development to deployment: <a href="https://arxiv.org/abs/2310.06474">multilingual jailbreak</a>
+    </li>
+    <li> 
+      [<span style="color:royalblue;">Evaluation</span>] Comprehensive and fair evaluation of foundation models: <a href="https://arxiv.org/pdf/2306.05179.pdf">M3Exam</a>, <a href="https://auto-arena.github.io/">Auto-Arena</a>
+    </li>
     <!-- <li> Sentiment and opinion understanding: how well do LLMs understand human's subjective feeling </li> -->
   </ul>
 
-  <span style="color:royalblue;"><i>Feel free to drop me an email if you want to collaborate. Research intern positions are also available based in Singapore or China (Hangzhou).</i></span>
+  <i>Feel free to drop me an email if you want to collaborate. Research intern positions are also available based in Singapore or China (Hangzhou).</i>
 
 
   <h3 id="news">News</h3>
     <ul>
+      <li><span style="color:#B08519">[June 2024]</span> SeaLLMs was awarded the "Best Innovate for Impact Award" by The International Telecommunication Union (ITU) of United Nations.</li>
+      <li><span style="color:#B08519">[May 2024]</span> M3Exam was officialy used to <a href="https://openai.com/index/hello-gpt-4o/">evaluate GPT-4o's multilingual and multimodal capability</a>.</li>
+      <li><span style="color:#B08519">[Apr 2024]</span> I am honored to speak at SCS and IMDA about our SeaLLMs project and the evaluation / safety measures we've implemented during the development. </li>
       <li><span style="color:#B08519">[Jan 2024]</span> Two papers accepted to ICLR 2024: <a href="https://arxiv.org/abs/2310.06474">multilingual jailbreak challenge</a> & <a href="https://arxiv.org/abs/2311.00262">plug-and-play policy planner for LLM-based dialog agent.</a></li>
       <li><span style="color:#B08519">[Nov 2023]</span> We release the first LLM named <a href="https://github.com/DAMO-NLP-SG/SeaLLMs">SeaLLMs</a> dedicated to languages in Southeast Asia region.</li>
       <li><span style="color:#B08519">[Sep 2023]</span> Two papers accepted to NeurIPS 2023.</li>
-      <li><span style="color:#B08519">[June 2023]</span> We release <strong>M3Exam</strong>, a novel benchmark sourced from real and official human exam questions for evaluating LLMs in a multilingual, multimodal, and multilevel context. <a href="https://arxiv.org/pdf/2306.05179.pdf">Paper</a> and <a href="https://github.com/DAMO-NLP-SG/M3Exam">data</a> are all public available now.</li>
+      <li><span style="color:#B08519">[June 2023]</span> We release <strong>M3Exam</strong>, a novel benchmark sourced from real and official human exam questions for evaluating LLMs in a multilingual, multimodal, and multilevel context. <a href="https://arxiv.org/pdf/2306.05179.pdf">[paper]</a> <a href="https://github.com/DAMO-NLP-SG/M3Exam">[data]</a></li>
       <!-- <li><span style="color:#B08519">[May 2023]</span> We conducted a reality check on current large language models for various sentiment analysis tasks, the <a href="https://arxiv.org/abs/2305.15005">paper</a> is available on arXiv now.</li> -->
       <!-- <li><span style="color:#B08519">[Apr 2023]</span> Our tutorial "Sentiment Analysis and Beyond in the Era of Enlarged Language Models" was accepted to IJCAI-2023. Check it <a href="https://isakzhang.github.io/talks/ijcai23-sentiment-tutorial.html">here</a>!</li> -->
     </ul>
   
 
+  <!--
   <h3><a name="awards"></a>Honors & Awards</h3>
   <ul>
     <li> Alibaba Star, Alibaba Group, 2022</li>
@@ -121,50 +129,43 @@ PLS ask for permission & add a link to this website before you directly copy and
     <li> National Cyber Security Scholarship (<i>Only <span style="color:#B08519">100</span> undergraduates in China are rewarded every year</i>), 2017</li>
     <li> Outstanding Graduate of Sichuan University, SCU, 2017</li>
     <li> Outstanding Student of Sichuan University, SCU, 2016 </li>
-    <!--
+    #<! --
     <li> Third Prize in National College Student Information Security Contest, 2017</li>
     <li> Outstanding Graduate of Sichuan University, SCU, 2017</li>
     <li> Outstanding Student of Sichuan University, SCU, 2016 </li>
     <li> Excellent President of Academic Student Community of Sichuan University, SCU, 2016 </li>  
-    -->
+    #- ->
   </ul>
+  -->
 
   <h3><a name="professional"></a>Professional Service</h3>
   <ul>
-    <li> Regular PC Member (or Reviewer): 
-      <ul>
-        <li>ACL, EMNLP, ACL Rolling Review, COLING, NLPCC</li>
-        <li>SIGKDD, WWW, WSDM</li>
-        <li>NeurIPS, AAAI</li>
-      </ul>
-    <li> Journal Reviewer:
-      <ul>
-        <li> ACM Transactions on Information Systems (TOIS)
-        <li> IEEE Transactions on Knowledge and Data Engineering (TKDE)
-        <li> ACM Transactions on the Web (TWEB)
-        <li> Neurocomputing
-        <li> Transactions on Audio, Speech and Language Processing (TASLP)
-        </ul>
-    </li>
+    <li> Area Chair: EMNLP 2024 </li>
+    <li> Regular PC Member (or Reviewer): ACL, EMNLP, ACL Rolling Review, COLING; NeurIPS, AAAI, IJCAI; SIGKDD, WWW, WSDM
+    <li> Journal Reviewer: ACM Transactions on Information Systems (TOIS), IEEE Transactions on Knowledge and Data Engineering (TKDE), ACM Transactions on the Web (TWEB), Neurocomputing, Transactions on Audio, Speech and Language Processing (TASLP) </li>
   </ul>
 
   <h3><a name="teaching"></a>Teaching & Talk</h3>
   <ul>
+    <li> Apr 2024: invited talk at <a href="https://www.scs.org.sg/events/details/transforming-analytics-with-gen-ai-and-site-visit-to-ibm">SCS</a> and <a href="https://www.imda.gov.sg/activities/activities-catalogue/technical-sharing-session-on-ai-safety">IMDA</a> about our SeaLLMs project and the evaluation / safety measures.</li>
+    <li> Mar 2024: invited talk on multilingual LLMs at NTU.</li>
     <li> Feb 2024: invited talk on multilingual LLMs at <a href="https://ai.sutd.edu.sg/">SUTD AI Mega Centre</a>.</li>
     <li> Sep 2023: invited talk on M3Exam at multilingual & multimodal LLMs session of <a href="http://mlnlp.world/mlnlp2023/">MLNLP 2023</a></li>
     <li> Aug 2023: half-day tutorial "<a href="https://isakzhang.github.io/talks/ijcai23-sentiment-tutorial.html">Sentiment Analysis in the Era of LLMs</a>" at IJCAI 2023. [<a href="https://docs.google.com/presentation/d/1fjH6ZxfCPtJPI1eU8eqhG9qdS1w3DPwxrYG6-SRmCMU/edit?usp=sharing">slides</a>]</li>
     <li> Mar 2023: invited talk "A Survey on Aspect-Based Sentiment Analysis" at <a href="https://s3a.sentic.net/">Singapore Symposium
       on Sentiment Analysis (S3A)</a>.</li>
     <li> Guest lecture "<i>Neural models for text</i>" for SEEM5680 Text Mining Models and Applications</li>
+    <!--
     <li> TA for ECLT5810 E-Commerce Data Mining Technique (for Msc, 2018-19 Spring, 2020-2021 Spring) </li>
     <li> TA for SEEM3440 Operations Research II (for UG, 2020 Fall)</li>
     <li> TA for SEEM3460/ESTR3504 Computer Processing System Concepts (for UG, 2018-19 Fall, 2019-2020 Fall, 2020-2021 Fall)</li>
+    -->
   </ul>
 </div>
 
 
 <div id='footer'>
-  <p style="text-align:right;">Last modified date: Nov 2023</p>
+  <p style="text-align:right;">Last modified date: June 2024</p>
 </div>
 
 </body>
