--- a/research.html
+++ b/research.html
@@ -47,7 +47,8 @@
   <br><br>
   Contact: <code class="language-plaintext highlighter-rouge">isakzhang [at] gmail.com</code>
   
-  <br>More about me: <a href="https://scholar.google.com/citations?user=tr7MWA4AAAAJ&hl=en">Google Scholar</a> / <a href="https://isakzhang.notion.site/">Blog Posts</a> / <a href="https://www.linkedin.com/in/wenxuan-zhang-608b88153/">LinkedIn</a>
+  <br>More about me: <a href="https://scholar.google.com/citations?user=tr7MWA4AAAAJ&hl=en">Google Scholar</a> | <a href="https://isakzhang.notion.site/">Blog Posts</a> | <a href="https://www.linkedin.com/in/wenxuan-zhang-608b88153/">LinkedIn</a> | <a href="https://x.com/Wenxuan__Zhang">X (Twitter)</a>
+
     <!-- 
   <br>Quick jumps: [<a href="#bio">Short Bio</a>] [<a href="#pub">Publications</a>] [<a href="#awards">Honors</a>] [<a href="#professional">Service</a>] [<a href="#teaching">Teaching&Talk</a>]
   -->
@@ -81,32 +82,35 @@
   </div>
   <!--end of Navigation bar-->
 
+  (*: equal contribution, ☨: corresponding author / major supervision)
+
   <h3><a name="pub"></a>Recent Preprints</h3> 
     <ul>
       <li>
+        <div id="text" style = "color:#1f57b8"> <span style="color:#c30"><i>[NEW]</i></span> Auto Arena of LLMs: Automating LLM Evaluations with Agent Peer-battles and Committee Discussions</div>
+        Ruochen Zhao, <strong>Wenxuan Zhang☨</strong>, Yew Ken Chia, Deli Zhao, Lidong Bing
+        <br>arXiv:2405.20267
+        [<a href="https://arxiv.org/abs/2405.20267">paper</a>] [<a href="https://auto-arena.github.io/">project page</a>]
+      </li>
+      <p> </p>
+
+      <li>
         <div id="text" style = "color:#1f57b8"> <span style="color:#c30"><i>[NEW]</i></span> How do Large Language Models Handle Multilingualism?</div>
-        Yiran Zhao, <strong>Wenxuan Zhang</strong>, Guizhen Chen, Kenji Kawaguchi, Lidong Bing
+        Yiran Zhao, <strong>Wenxuan Zhang☨</strong>, Guizhen Chen, Kenji Kawaguchi, Lidong Bing
         <br>arXiv:2402.18815
         [<a href="https://arxiv.org/abs/2402.18815">paper</a>] [<a href="">data&code</a>]
       </li>
       <p> </p>
 
       <li>
-        <div id="text" style = "color:#1f57b8"> SeaLLMs -- Large Language Models for Southeast Asia </div>
-        Xuan-Phi Nguyen*, <strong>Wenxuan Zhang*</strong>, Xin Li*, Mahani Aljunied*, Qingyu Tan, Liying Cheng, Guanzheng Chen, Yue Deng, Sen Yang, Chaoqun Liu, Hang Zhang, Lidong Bing
-        <br>arXiv:2312.00738
-        [<a href="https://arxiv.org/abs/2312.00738">paper</a>] [<a href="https://github.com/DAMO-NLP-SG/SeaLLMs">code</a>] [<a href="https://huggingface.co/SeaLLMs/SeaLLM-Chat-13b">demo</a>] 
-      </li>
-      <p> </p>
-
-      <li>
         <div id="text" style = "color:#1f57b8"></span>Is Translation All You Need? A Study on Solving Multilingual Tasks with Large Language Models</div>
-        Chaoqun Liu, <strong>Wenxuan Zhang</strong>, Yiran Zhao, Anh Tuan Luu, Lidong Bing
+        Chaoqun Liu, <strong>Wenxuan Zhang☨</strong>, Yiran Zhao, Anh Tuan Luu, Lidong Bing
         <br>arXiv:2403.10258
         [<a href="https://arxiv.org/abs/2403.10258">paper</a>] [<a href="">code</a>]
       </li>
       <p> </p>
 
+      <!--
       <li>
         <div id="text" style = "color:#1f57b8">AdaMergeX: Cross-Lingual Transfer with Large Language Models via Adaptive Adapter Merging        </div>
         Yiran Zhao, <strong>Wenxuan Zhang</strong>, Huiming Wang, Kenji Kawaguchi, Lidong Bing
@@ -114,10 +118,11 @@
         [<a href="https://arxiv.org/abs/2402.18913">paper</a>] [<a href="https://github.com/DAMO-NLP-SG/AdaMergeX">data&code</a>]
       </li>
       <p> </p>
+      -->
   
       <li>
         <div id="text" style = "color:#1f57b8">JsonTuning: Towards Generalizable, Robust, and Controllable Instruction Tuning</div>
-        Chang Gao, <strong>Wenxuan Zhang</strong>, Guizhen Chen, Wai Lam
+        Chang Gao, <strong>Wenxuan Zhang☨</strong>, Guizhen Chen, Wai Lam
         <br>arXiv:2310.02953
         [<a href="https://arxiv.org/abs/2310.02953">paper</a>] [<a href="https://github.com/gao-xiao-bai/JsonTuning">data&code</a>]
       </li>
@@ -128,8 +133,16 @@
   <h3><a name="pub"></a>Selected Publications<font size="4.5"> [<a href="https://scholar.google.com/citations?user=tr7MWA4AAAAJ&hl=en">Google Scholar</a>]</font></h3> 
   <ul>
       <li>
+        <div id="text" style = "color:#1f57b8"> SeaLLMs -- Large Language Models for Southeast Asia </div>
+        Xuan-Phi Nguyen*, <strong>Wenxuan Zhang*</strong>, Xin Li*, Mahani Aljunied*, Qingyu Tan, Liying Cheng, Guanzheng Chen, Yue Deng, Sen Yang, Chaoqun Liu, Hang Zhang, Lidong Bing
+        <br>ACL 2024 System Demostration
+        [<a href="https://arxiv.org/abs/2312.00738">paper</a>] [<a href="https://github.com/DAMO-NLP-SG/SeaLLMs">code</a>] [<a href="https://huggingface.co/SeaLLMs/SeaLLM-Chat-13b">demo</a>] 
+      </li>
+      <p> </p>
+
+      <li>
         <div id="text" style = "color:#1f57b8"> Multilingual Jailbreak Challenges in Large Language Models</div>
-        Yue Deng, <strong>Wenxuan Zhang</strong>, Sinno Jialin Pan, Lidong Bing
+        Yue Deng, <strong>Wenxuan Zhang☨</strong>, Sinno Jialin Pan, Lidong Bing
         <br>ICLR 2024
         [<a href="https://arxiv.org/abs/2310.06474">paper</a>] [<a href="https://github.com/DAMO-NLP-SG/multilingual-safety-for-LLMs">data&code</a>]
       </li>
@@ -137,7 +150,7 @@
 
       <li>
         <div id="text" style = "color:#1f57b8">Plug-and-Play Policy Planner for Large Language Model Powered Dialogue Agents</div>
-        Yang Deng, <strong>Wenxuan Zhang</strong>, Wai Lam, See-Kiong Ng, Tat-Seng Chua
+        Yang Deng, <strong>Wenxuan Zhang☨</strong>, Wai Lam, See-Kiong Ng, Tat-Seng Chua
         <br>ICLR 2024 
         [<a href="https://arxiv.org/abs/2311.00262">paper</a>] [<a href="">data&code</a>]
       </li>
@@ -168,7 +181,7 @@
 
       <li>
         <div id="text" style = "color:#1f57b8">SOUL: Towards Sentiment and Opinion Understanding of Language</div>
-        Yue Deng, <strong>Wenxuan Zhang</strong>, Sinno Jialin Pan, Lidong Bing.
+        Yue Deng, <strong>Wenxuan Zhang☨☨</strong>, Sinno Jialin Pan, Lidong Bing.
         <br>EMNLP 2023 [<a href="https://arxiv.org/abs/2310.17924">paper</a>] [<a href="https://github.com/DAMO-NLP-SG/SOUL">data&code</a>]
       </li>
       <p> </p>
@@ -189,28 +202,28 @@
 
       <li>
         <div id="text" style = "color:#1f57b8">Bidirectional Generative Framework for Cross-domain Aspect-based Sentiment Analysis</div>
-        Yue Deng, <strong>Wenxuan Zhang</strong>, Sinno Jialin Pan, Lidong Bing.
+        Yue Deng, <strong>Wenxuan Zhang☨</strong>, Sinno Jialin Pan, Lidong Bing.
         <br>ACL 2023 [<a href="https://arxiv.org/abs/2305.09509/">paper</a>] [<a href="https://github.com/DAMO-NLP-SG/BGCA">data&code</a>]
       </li>
       <p> </p>
 
       <li>
         <div id="text" style = "color:#1f57b8">Easy-to-Hard Learning for Information Extraction</div>
-        Chang Gao, <strong>Wenxuan Zhang</strong>, Wai Lam, Lidong Bing.
+        Chang Gao, <strong>Wenxuan Zhang☨</strong>, Wai Lam, Lidong Bing.
         <br>Findings of ACL 2023 [<a href="https://arxiv.org/abs/2305.09193">paper</a>] [<a href="https://github.com/DAMO-NLP-SG/IE-E2H">data&code</a>]
       </li>
       <p> </p>
 
       <li>
         <div id="text" style = "color:#1f57b8">Zero-Shot Text Classification via Self-Supervised Tuning</div>
-        Chaoqun Liu, <strong>Wenxuan Zhang</strong>, Guizhen Chen, Xiaobao Wu, Anh Tuan Luu, Chip Hong Chang, Lidong Bing.
+        Chaoqun Liu, <strong>Wenxuan Zhang☨</strong>, Guizhen Chen, Xiaobao Wu, Anh Tuan Luu, Chip Hong Chang, Lidong Bing.
         <br>Findings of ACL 2023 [<a href="https://arxiv.org/abs/2305.11442">paper</a>] [<a href="https://github.com/DAMO-NLP-SG/SSTuning">data&code</a>]
       </li>
       <p> </p>
 
       <li>
         <div id="text" style = "color:#1f57b8">A Unified Multi-task Learning Framework for Multi-goal Conversational Recommender Systems</div>
-        Yang Deng, <strong>Wenxuan Zhang</strong>, Weiwen Xu, Wenqiang Lei, Tat-Seng Chua, Wai Lam
+        Yang Deng, <strong>Wenxuan Zhang☨</strong>, Weiwen Xu, Wenqiang Lei, Tat-Seng Chua, Wai Lam
         <br>TOIS 2023 [<a href="https://arxiv.org/abs/2203.01054">paper</a>] [<a href="https://github.com/dengyang17/unimind">data&code</a>]
       </li>
       <p> </p>
