--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@ PLS ask for permission & add a link to this website before you directly copy and
 
   <h3 id="news">News</h3>
     <ul>
+      <li><span style="color:#B08519">[July 2024]</span> 🔥 <a href="https://huggingface.co/collections/SeaLLMs/seallms-v3-668f3a52e1e6fbaad5752cdb">SeaLLMs 3</a> is here - the latest iteration of SeaLLMs with SOTA performance of diverse tasks while specifically enhanced to be more trustworthy. Check out the <a href="https://huggingface.co/collections/SeaLLMs/seallms-v3-668f3a52e1e6fbaad5752cdb">model</a> and <a href="https://arxiv.org/abs/2407.19672">paper</a>!</li>
       <li><span style="color:#B08519">[June 2024]</span> SeaLLMs was awarded the "Best Innovate for Impact Award" by The International Telecommunication Union (ITU) of United Nations.</li>
       <li><span style="color:#B08519">[May 2024]</span> M3Exam was officialy used to <a href="https://openai.com/index/hello-gpt-4o/">evaluate GPT-4o's multilingual and multimodal capability</a>.</li>
       <li><span style="color:#B08519">[Apr 2024]</span> I am honored to speak at SCS and IMDA about our SeaLLMs project and the evaluation / safety measures we've implemented during the development. </li>
@@ -147,6 +148,7 @@ PLS ask for permission & add a link to this website before you directly copy and
 
   <h3><a name="teaching"></a>Teaching & Talk</h3>
   <ul>
+    <li>July 2024: invited keynote talk at <a href="https://kdd.sg/singapore-acm-sigkdd-symposium-2024/">Singapore ACM SIGKDD Symposium 2024</a>.</li>
     <li> Apr 2024: invited talk at <a href="https://www.scs.org.sg/events/details/transforming-analytics-with-gen-ai-and-site-visit-to-ibm">SCS</a> and <a href="https://www.imda.gov.sg/activities/activities-catalogue/technical-sharing-session-on-ai-safety">IMDA</a> about our SeaLLMs project and the evaluation / safety measures.</li>
     <li> Mar 2024: invited talk on multilingual LLMs at NTU.</li>
     <li> Feb 2024: invited talk on multilingual LLMs at <a href="https://ai.sutd.edu.sg/">SUTD AI Mega Centre</a>.</li>
