--- a/research.html
+++ b/research.html
@@ -86,8 +86,16 @@
 
   <h3><a name="pub"></a>Recent Preprints</h3> 
     <ul>
+        <li>
+        <div id="text" style = "color:#1f57b8"> <span style="color:#c30"><i>[NEW]</i></span> SeaLLMs 3: Open Foundation and Chat Multilingual Large Language Models for Southeast Asian Languages</div>
+        <strong>Wenxuan Zhang*</strong>, Hou Pong Chan*, Yiran Zhao*, Mahani Aljunied*, Jianyu Wang*, Chaoqun Liu, Yue Deng, Zhiqiang Hu, Weiwen Xu, Yew Ken Chia, Xin Li, Lidong Bing
+        <br>arXiv:2407.19672
+        [<a href="https://arxiv.org/abs/2407.19672">paper</a>] [<a href="https://damo-nlp-sg.github.io/SeaLLMs/">project page</a>]
+      </li>
+      <p> </p>
+
       <li>
-        <div id="text" style = "color:#1f57b8"> <span style="color:#c30"><i>[NEW]</i></span> Auto Arena of LLMs: Automating LLM Evaluations with Agent Peer-battles and Committee Discussions</div>
+        <div id="text" style = "color:#1f57b8">Auto Arena of LLMs: Automating LLM Evaluations with Agent Peer-battles and Committee Discussions</div>
         Ruochen Zhao, <strong>Wenxuan Zhang☨</strong>, Yew Ken Chia, Deli Zhao, Lidong Bing
         <br>arXiv:2405.20267
         [<a href="https://arxiv.org/abs/2405.20267">paper</a>] [<a href="https://auto-arena.github.io/">project page</a>]
@@ -95,7 +103,7 @@
       <p> </p>
 
       <li>
-        <div id="text" style = "color:#1f57b8"> <span style="color:#c30"><i>[NEW]</i></span> How do Large Language Models Handle Multilingualism?</div>
+        <div id="text" style = "color:#1f57b8">How do Large Language Models Handle Multilingualism?</div>
         Yiran Zhao, <strong>Wenxuan Zhang☨</strong>, Guizhen Chen, Kenji Kawaguchi, Lidong Bing
         <br>arXiv:2402.18815
         [<a href="https://arxiv.org/abs/2402.18815">paper</a>] [<a href="">data&code</a>]
@@ -118,7 +126,6 @@
         [<a href="https://arxiv.org/abs/2402.18913">paper</a>] [<a href="https://github.com/DAMO-NLP-SG/AdaMergeX">data&code</a>]
       </li>
       <p> </p>
-      -->
   
       <li>
         <div id="text" style = "color:#1f57b8">JsonTuning: Towards Generalizable, Robust, and Controllable Instruction Tuning</div>
@@ -127,7 +134,7 @@
         [<a href="https://arxiv.org/abs/2310.02953">paper</a>] [<a href="https://github.com/gao-xiao-bai/JsonTuning">data&code</a>]
       </li>
       <p> </p>
-
+      -->
     </ul>
 
   <h3><a name="pub"></a>Selected Publications<font size="4.5"> [<a href="https://scholar.google.com/citations?user=tr7MWA4AAAAJ&hl=en">Google Scholar</a>]</font></h3> 
