--- a/index.html
+++ b/index.html
@@ -107,15 +107,17 @@ PLS ask for permission & add a link to this website before you directly copy and
 
   <h3 id="news">News</h3>
     <ul>
+      <li><span style="color:#B08519">[Aug 2024]</span> I will serve as an Area Chair for ICLR 2025</li>
       <li><span style="color:#B08519">[July 2024]</span> 🔥 <a href="https://huggingface.co/collections/SeaLLMs/seallms-v3-668f3a52e1e6fbaad5752cdb">SeaLLMs 3</a> is here - the latest iteration of SeaLLMs with SOTA performance of diverse tasks while specifically enhanced to be more trustworthy. Check out the <a href="https://huggingface.co/collections/SeaLLMs/seallms-v3-668f3a52e1e6fbaad5752cdb">model</a> and <a href="https://arxiv.org/abs/2407.19672">paper</a>!</li>
       <li><span style="color:#B08519">[June 2024]</span> SeaLLMs was awarded the "Best Innovate for Impact Award" by The International Telecommunication Union (ITU) of United Nations.</li>
       <li><span style="color:#B08519">[May 2024]</span> M3Exam was officialy used to <a href="https://openai.com/index/hello-gpt-4o/">evaluate GPT-4o's multilingual and multimodal capability</a>.</li>
       <li><span style="color:#B08519">[Apr 2024]</span> I am honored to speak at SCS and IMDA about our SeaLLMs project and the evaluation / safety measures we've implemented during the development. </li>
       <li><span style="color:#B08519">[Jan 2024]</span> Two papers accepted to ICLR 2024: <a href="https://arxiv.org/abs/2310.06474">multilingual jailbreak challenge</a> & <a href="https://arxiv.org/abs/2311.00262">plug-and-play policy planner for LLM-based dialog agent.</a></li>
+      <!-- 
       <li><span style="color:#B08519">[Nov 2023]</span> We release the first LLM named <a href="https://github.com/DAMO-NLP-SG/SeaLLMs">SeaLLMs</a> dedicated to languages in Southeast Asia region.</li>
       <li><span style="color:#B08519">[Sep 2023]</span> Two papers accepted to NeurIPS 2023.</li>
       <li><span style="color:#B08519">[June 2023]</span> We release <strong>M3Exam</strong>, a novel benchmark sourced from real and official human exam questions for evaluating LLMs in a multilingual, multimodal, and multilevel context. <a href="https://arxiv.org/pdf/2306.05179.pdf">[paper]</a> <a href="https://github.com/DAMO-NLP-SG/M3Exam">[data]</a></li>
-      <!-- <li><span style="color:#B08519">[May 2023]</span> We conducted a reality check on current large language models for various sentiment analysis tasks, the <a href="https://arxiv.org/abs/2305.15005">paper</a> is available on arXiv now.</li> -->
+      <li><span style="color:#B08519">[May 2023]</span> We conducted a reality check on current large language models for various sentiment analysis tasks, the <a href="https://arxiv.org/abs/2305.15005">paper</a> is available on arXiv now.</li> -->
       <!-- <li><span style="color:#B08519">[Apr 2023]</span> Our tutorial "Sentiment Analysis and Beyond in the Era of Enlarged Language Models" was accepted to IJCAI-2023. Check it <a href="https://isakzhang.github.io/talks/ijcai23-sentiment-tutorial.html">here</a>!</li> -->
     </ul>
   
@@ -141,7 +143,7 @@ PLS ask for permission & add a link to this website before you directly copy and
 
   <h3><a name="professional"></a>Professional Service</h3>
   <ul>
-    <li> Area Chair: EMNLP 2024 </li>
+    <li> Area Chair: EMNLP 2024, ICLR 2025 </li>
     <li> Regular PC Member (or Reviewer): ACL, EMNLP, ACL Rolling Review, COLING; NeurIPS, AAAI, IJCAI; SIGKDD, WWW, WSDM
     <li> Journal Reviewer: ACM Transactions on Information Systems (TOIS), IEEE Transactions on Knowledge and Data Engineering (TKDE), ACM Transactions on the Web (TWEB), Neurocomputing, Transactions on Audio, Speech and Language Processing (TASLP) </li>
   </ul>
@@ -167,7 +169,7 @@ PLS ask for permission & add a link to this website before you directly copy and
 
 
 <div id='footer'>
-  <p style="text-align:right;">Last modified date: June 2024</p>
+  <p style="text-align:right;">Last modified date: Sep 2024</p>
 </div>
 
 </body>
