--- a/index.html
+++ b/index.html
@@ -40,14 +40,14 @@ PLS ask for permission & add a link to this website before you directly copy and
   <img class="avatar" src="img/wxzhang-2023-square2.jpg" alt="wxzhang-photo">
 
   <h1 id="wxzhang">Wenxuan Zhang <span style="font-family:STFangsong">(张雯轩)</span></h1>
-  Senior Algorithm Engineer (算法专家)
-  <br>Language Technology Lab
-  <br>Singapore R&D Center
-  <br>DAMO Academy, Alibaba Group
-  <br><br>
+  
   Contact: <code class="language-plaintext highlighter-rouge">isakzhang [at] gmail.com</code>
   
-  <br>More about me: <a href="https://scholar.google.com/citations?user=tr7MWA4AAAAJ&hl=en">Google Scholar</a> | <a href="https://isakzhang.notion.site/">Blog Posts</a> | <a href="https://www.linkedin.com/in/wenxuan-zhang-608b88153/">LinkedIn</a> | <a href="https://x.com/Wenxuan__Zhang">X (Twitter)</a>
+  <br>More about me: <a href="https://scholar.google.com/citations?user=tr7MWA4AAAAJ&hl=en">Google Scholar</a> | <a href="https://www.linkedin.com/in/wenxuan-zhang-608b88153/">LinkedIn</a> | <a href="https://x.com/Wenxuan__Zhang">X (Twitter)</a> | <a href="https://www.zhihu.com/people/jun-moer">Zhihu</a>
+
+  <br><br>
+  <span style="color:orangered;"><i>I will join <a href="https://www.sutd.edu.sg/">SUTD</a> as an Assistant Professor in early 2025. I am actively looking for highly motivated PhD students (2025 Fall) / Research Assistants / Visiting students, check out <a href=
+  isakzhang.github.io/getinvolved.html">this page</a> on how to get involved.</i></span>
   
   <!-- 
   <br>Quick jumps: [<a href="#bio">Short Bio</a>] [<a href="#pub">Publications</a>] [<a href="#awards">Honors</a>] [<a href="#professional">Service</a>] [<a href="#teaching">Teaching&Talk</a>]
@@ -62,10 +62,7 @@ PLS ask for permission & add a link to this website before you directly copy and
       <a href="research.html">Publications</a>
     </div>
     <div>
-      <a href="#teaching">Teaching & Talk</a>
-    </div>
-    <div>
-      <a href="https://isakzhang.notion.site/">Blog</a>
+      <a href="getinvolved.html">Getting Invovled</a>
     </div>
     <script>
       $(function () {
@@ -82,39 +79,43 @@ PLS ask for permission & add a link to this website before you directly copy and
   </div>
   <!--end of Navigation bar-->
   
-  <h3><a name="bio"></a>About me</h3>
-  I am currently a research scientist at Language Technology Lab, <a href="https://damo.alibaba.com/?lang=en">Alibaba DAMO Academy</a>. Prior to that, I obtained my Ph.D. degree from <a href="https://www.cuhk.edu.hk/">The Chinese University of Hong Kong</a>, 
-  under the supervision of <a href="http://www1.se.cuhk.edu.hk/~textmine/">Prof. Wai Lam</a>.
+  <h3><a name="bio"></a>About me <font size="4.5">[<a href="./bio.html">Short bio</a>]</font></h3>
+  I will join Singapore University of Technology and Design (SUTD) as a tenure-track Assistant Professor in early 2025. 
+  Currently, I am a research scientist at Language Technology Lab, <a href="https://damo.alibaba.com/?lang=en">Alibaba DAMO Academy</a>, Singapore. Prior to that, I received my Ph.D. from <a href="https://www.cuhk.edu.hk/">The Chinese University of Hong Kong</a>, where I was advised by <a href="http://www1.se.cuhk.edu.hk/~textmine/">Prof. Wai Lam</a>.
 
-  <br><br>My research aims to advance NLP models that are <strong>inclusive</strong>, supporting diverse languages and cultures (e.g., multilingual large language models), while also <strong>trustworthy</strong> through techniques that improve safety and robustness of language models. I am passionate about ensuring NLP benefits people equally by making systems accessible, controllable and reliable.
+  <br><br>My research interests lie broadly in natural language processing and machine learning, though most of my research are centered around large language models these days. 
+  I am passinate to advance NLP models that are <strong>inclusive</strong>, supporting diverse languages and cultures (e.g., multilingual large language models), while also <strong>trustworthy</strong> through techniques that improve understanding, safety and robustness of language models. 
+  <!--I am passionate about ensuring NLP benefits people equally by making systems accessible, controllable and reliable.-->
 
-  <br><br>Current research projects are (full publications can be found <a href="https://isakzhang.github.io/research.html">here</a> or <a href="https://scholar.google.com/citations?user=tr7MWA4AAAAJ&hl=en">Google Scholar</a>):
+  <br><br>Research projects I'm working on / plan to work on:
   <ul>
     <li> 
-      [<span style="color:royalblue;">Multilingual</span>] Understanding and enhancing multilingual capabilities of LLMs: <a href="https://damo-nlp-sg.github.io/SeaLLMs/">SeaLLMs</a>
+      [<span style="color:royalblue;">Multilingual</span>] Understanding and enhancing multilingual capabilities of LLMs (<a href="https://damo-nlp-sg.github.io/SeaLLMs/">SeaLLMs</a> Project)
     </li>
     <li> 
-      [<span style="color:royalblue;">Safety</span>] Ensuring safety of LLMs from development to deployment: <a href="https://arxiv.org/abs/2310.06474">multilingual jailbreak</a>
+      [<span style="color:royalblue;">Safety</span>] Ensuring safety of LLMs from development to deployment (<a href="https://arxiv.org/abs/2310.06474">MultiJail</a>)
     </li>
     <li> 
-      [<span style="color:royalblue;">Evaluation</span>] Comprehensive and fair evaluation of foundation models: <a href="https://arxiv.org/pdf/2306.05179.pdf">M3Exam</a>, <a href="https://auto-arena.github.io/">Auto-Arena</a>
+      [<span style="color:royalblue;">Evaluation</span>] Comprehensive and fair evaluation of foundation models (<a href="https://arxiv.org/pdf/2306.05179.pdf">M3Exam</a>, <a href="https://auto-arena.github.io/">Auto-Arena</a>)
+    </li>
+    <li> 
+      [<span style="color:royalblue;">Accessiblity</span>] Making LLMs more accessible to general users, through model compression or small-large model collaboration
     </li>
     <!-- <li> Sentiment and opinion understanding: how well do LLMs understand human's subjective feeling </li> -->
   </ul>
 
-  <i>Feel free to drop me an email if you want to collaborate. Research intern positions are also available based in Singapore or China (Hangzhou).</i>
-
 
   <h3 id="news">News</h3>
     <ul>
-      <li><span style="color:#B08519">[Aug 2024]</span> I will serve as an Area Chair for ICLR 2025</li>
-      <li><span style="color:#B08519">[July 2024]</span> 🔥 <a href="https://huggingface.co/collections/SeaLLMs/seallms-v3-668f3a52e1e6fbaad5752cdb">SeaLLMs 3</a> is here - the latest iteration of SeaLLMs with SOTA performance of diverse tasks while specifically enhanced to be more trustworthy. Check out the <a href="https://huggingface.co/collections/SeaLLMs/seallms-v3-668f3a52e1e6fbaad5752cdb">model</a> and <a href="https://arxiv.org/abs/2407.19672">paper</a>!</li>
-      <li><span style="color:#B08519">[June 2024]</span> SeaLLMs was awarded the "Best Innovate for Impact Award" by The International Telecommunication Union (ITU) of United Nations.</li>
-      <li><span style="color:#B08519">[May 2024]</span> M3Exam was officialy used to <a href="https://openai.com/index/hello-gpt-4o/">evaluate GPT-4o's multilingual and multimodal capability</a>.</li>
-      <li><span style="color:#B08519">[Apr 2024]</span> I am honored to speak at SCS and IMDA about our SeaLLMs project and the evaluation / safety measures we've implemented during the development. </li>
-      <li><span style="color:#B08519">[Jan 2024]</span> Two papers accepted to ICLR 2024: <a href="https://arxiv.org/abs/2310.06474">multilingual jailbreak challenge</a> & <a href="https://arxiv.org/abs/2311.00262">plug-and-play policy planner for LLM-based dialog agent.</a></li>
-      <!-- 
-      <li><span style="color:#B08519">[Nov 2023]</span> We release the first LLM named <a href="https://github.com/DAMO-NLP-SG/SeaLLMs">SeaLLMs</a> dedicated to languages in Southeast Asia region.</li>
+      <li>[Oct 2024] Glad to be invited to give a keynote talk at SSNLP 2024.</li>
+      <li>[Aug 2024] I will serve as an Area Chair for ICLR 2025</li>
+      <li>[July 2024] <a href="https://huggingface.co/collections/SeaLLMs/seallms-v3-668f3a52e1e6fbaad5752cdb">SeaLLMs 3</a> is here - the latest iteration of SeaLLMs with SOTA performance of diverse tasks while specifically enhanced to be more trustworthy. Check out the <a href="https://huggingface.co/collections/SeaLLMs/seallms-v3-668f3a52e1e6fbaad5752cdb">model</a> and <a href="https://arxiv.org/abs/2407.19672">paper</a>!</li>
+      <li>[June 2024] SeaLLMs was awarded the <i>"Best Innovate for Impact Award"</i> by The International Telecommunication Union (ITU) of United Nations.</li>
+      <li>[May 2024] M3Exam was officialy used to <a href="https://openai.com/index/hello-gpt-4o/">evaluate GPT-4o's multilingual and multimodal capability</a>.</li>
+      <li>[Apr 2024] I am honored to speak at SCS and IMDA about our SeaLLMs project and the evaluation / safety measures we've implemented during the development. </li>
+      <li>[Jan 2024] Two papers accepted to ICLR 2024: <a href="https://arxiv.org/abs/2310.06474">multilingual jailbreak challenge</a> & <a href="https://arxiv.org/abs/2311.00262">plug-and-play policy planner for LLM-based dialog agent.</a></li>
+      <li>[Nov 2023] We release <a href="https://github.com/DAMO-NLP-SG/SeaLLMs">SeaLLMs</a> - the first LLM dedicated to languages in Southeast Asia region.</li>
+      <!--
       <li><span style="color:#B08519">[Sep 2023]</span> Two papers accepted to NeurIPS 2023.</li>
       <li><span style="color:#B08519">[June 2023]</span> We release <strong>M3Exam</strong>, a novel benchmark sourced from real and official human exam questions for evaluating LLMs in a multilingual, multimodal, and multilevel context. <a href="https://arxiv.org/pdf/2306.05179.pdf">[paper]</a> <a href="https://github.com/DAMO-NLP-SG/M3Exam">[data]</a></li>
       <li><span style="color:#B08519">[May 2023]</span> We conducted a reality check on current large language models for various sentiment analysis tasks, the <a href="https://arxiv.org/abs/2305.15005">paper</a> is available on arXiv now.</li> -->
@@ -122,43 +123,35 @@ PLS ask for permission & add a link to this website before you directly copy and
     </ul>
   
 
-  <!--
-  <h3><a name="awards"></a>Honors & Awards</h3>
+
+  <h3><a name="awards"></a>Selected Honors & Awards</h3>
   <ul>
     <li> Alibaba Star, Alibaba Group, 2022</li>
-    <li> ACM SIGIR Student Travel Grant for SIGIR 2020 </li>
-    <li> National Scholarship in 2016-2017, Ministry of Education of China, 2017 </li>
-    <li> National Scholarship in 2015-2016, Ministry of Education of China, 2016 </li>
-    <li> National Cyber Security Scholarship (<i>Only <span style="color:#B08519">100</span> undergraduates in China are rewarded every year</i>), 2017</li>
-    <li> Outstanding Graduate of Sichuan University, SCU, 2017</li>
-    <li> Outstanding Student of Sichuan University, SCU, 2016 </li>
-    #<! --
-    <li> Third Prize in National College Student Information Security Contest, 2017</li>
-    <li> Outstanding Graduate of Sichuan University, SCU, 2017</li>
-    <li> Outstanding Student of Sichuan University, SCU, 2016 </li>
-    <li> Excellent President of Academic Student Community of Sichuan University, SCU, 2016 </li>  
-    #- ->
+    <li> National Scholarship, 2017</li>
+    <li> National Cyber Security Scholarship (<i>Only <span style="color:#B08519">100</span> undergraduates in China are awarded every year</i>), 2017</li>
+    <li> National Scholarship, 2016</li>
   </ul>
-  -->
+
 
   <h3><a name="professional"></a>Professional Service</h3>
   <ul>
-    <li> Area Chair: EMNLP 2024, ICLR 2025 </li>
-    <li> Regular PC Member (or Reviewer): ACL, EMNLP, ACL Rolling Review, COLING; NeurIPS, AAAI, IJCAI; SIGKDD, WWW, WSDM
-    <li> Journal Reviewer: ACM Transactions on Information Systems (TOIS), IEEE Transactions on Knowledge and Data Engineering (TKDE), ACM Transactions on the Web (TWEB), Neurocomputing, Transactions on Audio, Speech and Language Processing (TASLP) </li>
+    <li> Area Chair: ICLR 2025, NAACL 2025, EMNLP 2024 </li>
+    <li> Regular PC Member (or Reviewer): ACL, EMNLP, ACL Rolling Review, COLING; NeurIPS, ICML, AAAI, IJCAI; SIGKDD, WWW, WSDM
+    <li> Journal Reviewer: Computational Linguistics (CL), ACM Transactions on Information Systems (TOIS), IEEE Transactions on Knowledge and Data Engineering (TKDE), ACM Transactions on the Web (TWEB), Neurocomputing, Transactions on Audio, Speech and Language Processing (TASLP) </li>
   </ul>
 
   <h3><a name="teaching"></a>Teaching & Talk</h3>
   <ul>
+    <li>Nov 2024: invited keynote talk at <a href="https://wing-nus.github.io/SSNLP-2024/">SSNLP 2024</a></li>
+    <li>Oct 2024: invited talk and panel discussion at <a href="https://www.switchsg.org/">Singapore Week of Innovation Technology (SWITCH) 2024</a></li>
     <li>July 2024: invited keynote talk at <a href="https://kdd.sg/singapore-acm-sigkdd-symposium-2024/">Singapore ACM SIGKDD Symposium 2024</a>.</li>
-    <li> Apr 2024: invited talk at <a href="https://www.scs.org.sg/events/details/transforming-analytics-with-gen-ai-and-site-visit-to-ibm">SCS</a> and <a href="https://www.imda.gov.sg/activities/activities-catalogue/technical-sharing-session-on-ai-safety">IMDA</a> about our SeaLLMs project and the evaluation / safety measures.</li>
-    <li> Mar 2024: invited talk on multilingual LLMs at NTU.</li>
-    <li> Feb 2024: invited talk on multilingual LLMs at <a href="https://ai.sutd.edu.sg/">SUTD AI Mega Centre</a>.</li>
+    <li>Apr 2024: invited talk on the SeaLLMs project at <a href="https://www.scs.org.sg/events/details/transforming-analytics-with-gen-ai-and-site-visit-to-ibm">Singapore Computer Society (SCS)</a>
+    <li> Apr 2024: invited talk at <a href="https://www.imda.gov.sg/activities/activities-catalogue/technical-sharing-session-on-ai-safety"> Infocomm Media Development Authority (IMDA)</a> of Singapore</li>
     <li> Sep 2023: invited talk on M3Exam at multilingual & multimodal LLMs session of <a href="http://mlnlp.world/mlnlp2023/">MLNLP 2023</a></li>
     <li> Aug 2023: half-day tutorial "<a href="https://isakzhang.github.io/talks/ijcai23-sentiment-tutorial.html">Sentiment Analysis in the Era of LLMs</a>" at IJCAI 2023. [<a href="https://docs.google.com/presentation/d/1fjH6ZxfCPtJPI1eU8eqhG9qdS1w3DPwxrYG6-SRmCMU/edit?usp=sharing">slides</a>]</li>
     <li> Mar 2023: invited talk "A Survey on Aspect-Based Sentiment Analysis" at <a href="https://s3a.sentic.net/">Singapore Symposium
       on Sentiment Analysis (S3A)</a>.</li>
-    <li> Guest lecture "<i>Neural models for text</i>" for SEEM5680 Text Mining Models and Applications</li>
+    <li> Guest lecture "<i>Neural models for text</i>" for SEEM5680 Text Mining Models and Applications at CUHK</li>
     <!--
     <li> TA for ECLT5810 E-Commerce Data Mining Technique (for Msc, 2018-19 Spring, 2020-2021 Spring) </li>
     <li> TA for SEEM3440 Operations Research II (for UG, 2020 Fall)</li>
@@ -169,7 +162,7 @@ PLS ask for permission & add a link to this website before you directly copy and
 
 
 <div id='footer'>
-  <p style="text-align:right;">Last modified date: Sep 2024</p>
+  <p style="text-align:center;">Last updated: Dec 2024</p>
 </div>
 
 </body>
